another high contrast fix for the docs site

--- a/sites/website/src/css/custom.css
+++ b/sites/website/src/css/custom.css
@@ -74,8 +74,9 @@ html[data-theme='dark'] .DocSearch-Hit[aria-selected="true"] a mark {
   --ifm-menu-color-background-active: transparent;
 }
 
+.breadcrumbs__link,
 .menu__list-item-collapsible--active {
-  background: transparent;
+  background: transparent !important;
 }
 
 .docusaurus-highlight-code-line {
@@ -94,4 +95,8 @@ html[data-theme='dark'] .DocSearch-Hit[aria-selected="true"] a mark {
 .button.button--secondary.button--sm.menu__button {
   background: var(--ifm-color-primary);
   color: var(--ifm-color-secondary);
+}
+
+.navbar__item.navbar__link.navbar__link--active {
+  color: var(--ifm-heading-color);
 }
